# pry-jupiter-phising-detect-srv-db-postgres

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: build-and-push.yml  pr-checks.yml
app/: seed.py
tests/: test_db_setup.py
