[project]
name = "db-postgres-manager"
version = "1.0.0"
description = "Gestor de inicialización y datos de base de datos"
authors = [{ name = "Julián & Antigravity" }]
dependencies = [
    "sqlalchemy>=2.0.0",
    "psycopg>=3.1.0",
    "python-dotenv>=1.0.0",
    "shared-kernel",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.3.1",
]

[tool.uv.sources]
shared-kernel = { path = "../lib-shared-kernel", editable = true }
